@@ -8,6 +8,10 @@ Change log for zeit.web
 
 - ZON-2292: Add lazyloading for centerpages
 
+- ZON-2303: Set caching header for login-state
+
+- MAINT: remove obsolete sso_activate option from login view
+
 
 2.13.3 (2015-10-14)
 -------------------
